--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,33 @@
 language: ruby
 cache:
-  - bundler
+- bundler
 install:
-  - bundle install
+- bundle install
 rvm:
-  - 1.9.3
-  - 2.0
-  - 2.1
-  - 2.2
+- 1.9.3
+- 2.0
+- 2.1
+- 2.2
 notifications:
   email:
     recipients:
-      - sensu-plugin@sensu-plugins.io
+    - sensu-plugin@sensu-plugins.io
     on_success: change
     on_failure: always
-
 script:
-  - 'bundle exec rake default'
+- bundle exec rake default
+- gem build sensu-plugins-hubot.gemspec
+- gem install sensu-plugins-hubot-*.gem
+deploy:
+  provider: rubygems
+  api_key:
+    secure: yz6zHFU9XZVF7Rw0SWJvwnNzwP0Q/z4+j5Ans72ohBPM7SpaBb5EFSc9zTbbTodh3ncH10tj7uVi043bZhYpG4jFOf+qQnXKr4OPK9gERjRrMNaCF4MiYcBs1kweUuwY9RLFqsz+7KfQsbY/GHuDmyP40MpHgSZ/N40qO0df78k=
+  gem: sensu-plugins-hubot
+  on:
+    tags: true
+    all_branches: true
+    rvm: 1.9.3
+    rvm: 2.0
+    rvm: 2.1
+    rvm: 2.2
+    repo: sensu-plugins/sensu-plugins-hubot
